# docs/openapi.json
@@ -205,6 +205,8 @@
             "required": false,
             "schema": {
               "type": "integer",
+              "maximum": 1000,
+              "minimum": 1,
               "default": 50,
               "title": "Limit"
             }
@@ -268,6 +270,8 @@
             "required": false,
             "schema": {
               "type": "integer",
+              "maximum": 1000,
+              "minimum": 1,
               "default": 100,
               "title": "Limit"
             }
@@ -668,6 +672,8 @@
             "required": false,
             "schema": {
               "type": "integer",
+              "maximum": 3650,
+              "minimum": 1,
               "default": 7,
               "title": "Days"
             }
